# E-Piau-

./: .gitignore  README.md  buscar_sementes_2024.py  notas_tcc.md  pyproject.toml  requirements.txt
config/dominios/: arboviroses.json  criminalidade.json
dados/brutos/: amostra_noticias.json  sementes_noticias_reais_2024.json
dados/gold_standard/: gold_standard.json  resultado_avaliacao.json
dados/processados/: piaui_municipios.geojson
docs/: alteracoes_2026-06-20.md  dominios.md  fontes_reais_2024.md  manual_resumido.md  relatorio_tecnico.md  spec.md
interface/: painel.py
monografia/: Guia_Capitulos_TCC.docx  Monografia_Metodologia_Resultados.docx
notebooks/: 01_fluxo_prototipo.ipynb  02_avaliacao_ner.ipynb
scripts/: analises_complementares.py  avaliar_ner.py  coletar.py  executar_pipeline.py  processar.py
src/epipiaui_monitor/: __init__.py  banco.py  configuracao.py  dominio.py  modelos.py  piaui.py  utilitarios.py
src/epipiaui_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/epipiaui_monitor/coletores/: __init__.py  html.py  noticias.py  sementes.py
src/epipiaui_monitor/pln/: __init__.py  processador.py
tests/: README.md  __init__.py  test_banco.py  test_dominio.py  test_pln.py  test_utilitarios.py
