[project]
name = "epipiaui-monitor"
version = "0.1.0"
description = "MVP de epidemiologia digital para monitoramento exploratorio de arboviroses no Piaui."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
